Заготовка на вывод темы
Проверка, залогинен ли пользователь в системе

--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,32 @@
 <input id="button2" type="button" value="Ok">
 <br>
 <br>
-
 Введите логин и пароль
 <input id="input1" type="text">
 <input id="input2" type="text">
 <input id="button3" type="button" value="ok">
 <div id="message1"></div>
+<br>
+<input id="button4" type="button" value="Вывести темы">
 </body>
 <script>
+   let token;
+   button4.onclick=async function(){
+      let response =await fetch("/getTopics?token="+token);
+      if (response.ok) { 
+       let data = await response.json();
+       message1.innerText=data.message;
+    }
+   }
 button3.onclick=async function(){
    console.log('/auth?login='+encodeURIComponent(input1.value)+'&password='+encodeURIComponent(input2.value));
    let response = await fetch("/auth?login="+encodeURIComponent(input1.value)+"&password="+encodeURIComponent(input2.value));
    if (response.ok) { 
        let data = await response.json();
        if(data.error.code==='200'){
+          token=data.response.token;
        message1.innerText=data.response.token;
+       console.log(token);
        }
        else
        message1.innerText=data.error.message+" "+data.error.code;
